assets/css/main.css
/* General */
@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&display=swap');

:root {
    --text-color-dark: #e4ae00;
    --text-color-light: #494b49;
    --background-color-dark: #121524;
    --background-color-light: #ebeef2;
    --transition-duration: 0ms;
}

html,
body {
    margin: 0 auto;
    min-width: 46.875rem;
    max-width: 56.5625rem;
    box-sizing: border-box;
    font-family: 'Fira Code', sans-serif;
    text-rendering: optimizeLegibility;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    background-size: clamp(3rem, 10vw, 4rem) clamp(3rem, 10vw, 4rem);
}

body {
    display: flex;
    flex-direction: column;
    padding-inline: clamp(1.5rem, 5vw, 4rem);
    padding-block: 0 clamp(1rem, 5vw, 4rem);
}

hr {
    border-style: solid;
    border-width: 0.0625rem 0 0 0;
}

@media (max-width: 48em) {

    html,
    body {
        width: 100%;
        min-width: 0;
    }
}

* {
    box-sizing: border-box;
}

a {
    text-decoration: none;
}

h1 {
    margin: 0;
}

header h1 {
    font-weight: 300;
    line-height: 1em;
    font-size: clamp(2.5rem, 5vw, 3.5rem);
}

header h2 {
    margin: 0;
    font-weight: 300;
    font-size: clamp(1.25rem, 5vw, 1.5rem);
}

header h3 {
    margin: 0;
    font-weight: 300;
    font-size: clamp(1rem, 5vw, 1.25rem);
}

.profile {
    display: flex;
    row-gap: 1.5rem;
    column-gap: 1.5rem;
    align-items: center;
    margin-top: 5.25rem;
}

/* Icons */
.icon {
    height: 100%;
    display: block;
    background-size: contain;
    background-repeat: no-repeat;
}

.icon.github {
    background-image: url(../images/icons/github.svg);
}

.icon.linkedin {
    background-image: url(../images/icons/linkedin.svg);
}

.icon.location {
    background-image: url(../images/icons/location.svg);
}

.icon.email {
    padding: 0.125rem;
    background-image: url(../images/icons/email.svg);
}

.icon.interactive {
    transition: filter var(--transition-duration) ease-in-out;
}

.icon.medium {
    min-width: 1.75rem;
    max-width: 1.75rem;
    min-height: 1.75rem;
    max-height: 1.75rem;
}

/* Tabs */
.tab-navigator {
    overflow-x: hidden;
}

.tab-navigator [type="radio"] {
    display: none;
}

.tabs {
    padding: 0;
    display: flex;
    overflow: auto;
    list-style: none;
    border-radius: 0.375rem;
    align-items: stretch;
}

.tab {
    flex: 1;
    border: 0;
    cursor: pointer;
    overflow: hidden;
    text-align: center;
    white-space: nowrap;
    text-overflow: ellipsis;
    font-size: clamp(1.125rem, 5vw - 1rem, 1.625rem);
    transition: background-color var(--transition-duration) ease-in-out, color var(--transition-duration) ease-in-out;
}

.tab a {
    display: block;
    padding: 0.25rem 1.25rem;
}

.tab:not(:first-child) {
    border-left-width: 0.0625rem;
    border-left-style: solid;
}

.tab:not(:last-child) {
    border-bottom-width: 0;
    border-bottom-style: solid;
}

.tab:first-child>label {
    border-radius: 0.375rem 0 0 0.375rem;
}

.tab:last-child>label {
    border-radius: 0 0.375rem 0.375rem 0;
}

.tab-content {
    padding: 0.75rem;
    display: none;
    border-radius: 0.375rem;
}

/* Formatting */
.flex {
    display: flex;
}

.flex.row-center-y {
    align-items: center;
}

.flex.col-gap-1 {
    column-gap: 0.5rem;
}

.flex.col-gap-2 {
    column-gap: 1.5rem;
}

.flex.column {
    flex-direction: column;
}

.flex.row-gap-1 {
    row-gap: 0.8rem;
}

.avatar {
    border-radius: 50%;
    width: 7.8125rem;
    height: 7.8125rem;
}

@media screen and (max-width: 64em) {

    .profile {
        text-align: center;
        flex-direction: column;
    }

    .profile .profile-location {
        row-gap: 0.25rem;
        align-self: center;
        align-items: center;
        flex-direction: column;
    }

    .profile .profile-location span {
        display: block;
    }

    .tabs {
        flex-direction: column;
    }

    .tab:first-child>label {
        border-radius: 0;
    }

    .tab:not(:first-child) {
        border-left: 0;
    }

    .tab:not(:last-child) {
        border-bottom-width: 0.0625rem;
    }

    .tab:last-child>label {
        border-radius: 0;
    }
}

article p.quote {
    margin-top: 0.5rem;
    font-style: italic;
    font-size: 1.45rem;
}

@media (max-width: 48em) {
    article p.quote {
        font-size: 1.25rem;
    }
}

@media (max-width: 18.75em) {

    .tab {
        text-align: left;
    }
}

main {
    flex: 1;
}

main section {
    display: flex;
    row-gap: 1rem;
    flex-direction: column;
}

main section article {
    padding: 1rem;
    border-radius: 0.375rem;
    border-width: 0.0625rem;
    border-style: solid;
}

main section article .technologies {
    display: flex;
    column-gap: 0.5rem;
    padding-top: 0.25rem;
    flex-wrap: wrap;
    row-gap: 0.5rem;
}

main section article .technologies span {
    border-width: 0.0625rem;
    border-style: solid;
    border-radius: 0.375rem;
    padding: 0.25rem 0.5rem;
    transition: color var(--transition-duration) ease-in-out, background-color var(--transition-duration) ease-in-out;
}

/* Themes. */
.theme-switcher {
    right: 0;
    border: 0;
    margin: 2rem;
    width: 2.25rem;
    height: 2.25rem;
    cursor: pointer;
    position: absolute;
    background-size: contain;
    background-repeat: no-repeat;
    background-color: transparent;
}

.theme-switcher:hover {
    animation: sway 2s infinite alternate ease-in-out;
}

.theme.light {
    background-image: radial-gradient(var(--text-color-light) 1px, transparent 0);
}

.theme.dark {
    background-image: radial-gradient(var(--text-color-dark) 1px, transparent 0);
}

.theme.light .theme-switcher {
    background-image: url("../images/icons/theme-light.svg");
}

.theme.dark .theme-switcher {
    background-image: url("../images/icons/theme-dark.svg");
}

.theme.light main section article,
.theme.light main section article .technologies span {
    border-color: var(--text-color-light);
    background-color: var(--background-color-light);
}

.theme.dark main section article,
.theme.dark main section article .technologies span {
    border-color: var(--text-color-dark);
    background-color: var(--background-color-dark);
}

.theme.light main section article .technologies span:hover {
    color: var(--background-color-light);
    background-color: var(--text-color-light);
}

.theme.dark main section article .technologies span:hover {
    color: var(--background-color-dark);
    background-color: var(--text-color-dark);
}

.theme.light hr {
    color: var(--text-color-light);
    border-color: var(--text-color-light);
}

.theme.dark hr {
    color: var(--text-color-dark);
    border-color: var(--text-color-dark);
}

.theme.light .tab {
    background-color: var(--background-color-light);
}

.theme.dark .tab {
    background-color: var(--background-color-dark);
}

.theme.light .tab a,
.theme.dark .tab a {
    color: inherit;
}

.theme.light .tab:not(:first-child) {
    border-left-color: var(--text-color-light);
    border-bottom-color: var(--text-color-light);
}

.theme.dark .tab:not(:first-child) {
    border-left-color: var(--text-color-dark);
    border-bottom-color: var(--text-color-dark);
}

.theme.light .tab-content {
    border: 1px solid var(--text-color-light);
}

.theme.dark .tab-content {
    border: 1px solid var(--text-color-dark);
}

.theme.light .tab-navigator .tab[data-active] {
    background: var(--text-color-light);
    color: var(--background-color-light);
}

.theme.dark .tab-navigator .tab[data-active] {
    background: var(--text-color-dark);
    color: var(--background-color-dark);
}

.theme.light .tab:hover {
    background-color: color-mix(in srgb, var(--text-color-light), transparent 75%);
}

.theme.dark .tab:hover {
    background-color: color-mix(in srgb, var(--text-color-dark), transparent 75%);
}

.theme.light .icon.interactive:hover {
    filter: brightness(0.5);
}

.theme.dark .icon.interactive:hover {
    filter: brightness(2);
}

.theme.light {
    color: var(--text-color-light);
    background-color: var(--background-color-light);
}

.theme.dark {
    color: var(--text-color-dark);
    background-color: var(--background-color-dark);
}

.theme.light .tabs {
    border: 1px solid var(--text-color-light);
    background-color: var(--background-color-light);
}

.theme.dark .tabs {
    border: 1px solid var(--text-color-dark);
    background-color: var(--background-color-dark);
}

.theme.light a.link {
    color: var(--text-color-light);
}

.theme.dark a.link {
    color: var(--text-color-dark);
}

.theme.light a.link.bordered {
    border-bottom-color: var(--text-color-light);
    border-bottom-color: color-mix(in srgb, var(--text-color-light), transparent 25%);
}

.theme.dark a.link.bordered {
    border-bottom-color: var(--text-color-dark);
    border-bottom-color: color-mix(in srgb, var(--text-color-dark), transparent 25%);
}

.theme.light a.link:hover {
    background-color: color-mix(in srgb, var(--text-color-light), transparent 75%);
}

.theme.dark a.link:hover {
    background-color: color-mix(in srgb, var(--text-color-dark), transparent 75%);
}

/* Other. */
@keyframes sway {
    from {
        transform: rotate(0deg)
    }

    50% {
        transform: rotate(15deg);
    }

    to {
        transform: rotate(0deg)
    }
}

section>p {
    margin-top: 0;
    margin-bottom: 0;
}

/* Links */
a.link {
    border-radius: 5px;
    padding-left: 0.25rem;
    padding-right: 0.25rem;
    display: inline-block;
    transition: background-color var(--transition-duration) ease-in-out;
}

a.link.bordered {
    border-bottom-width: 5px;
    border-bottom-style: solid;
}

p.info {
    margin-bottom: 0;
}

